@@ -5,12 +5,12 @@ export LDFLAGS
 
 LTV="libtoolize (GNU libtool) 1.5.6"
 ACV="autoconf (GNU Autoconf) 2.59"
-AMV="automake (GNU automake) 1.9.1"
+AMV="automake (GNU automake) 1.9.2"
 USAGE="
 This script documents the versions of the tools I'm using to build rpm:
 	libtool-1.5.6
 	autoconf-2.59
-	automake-1.9.1
+	automake-1.9.2
 Simply edit this script to change the libtool/autoconf/automake versions
 checked if you need to, as rpm should build (and has built) with all
 recent versions of libtool/autoconf/automake.
